Add option to restore source data
